fixing tags on mobile

--- a/app/src/Pages/Document.scss
+++ b/app/src/Pages/Document.scss
@@ -57,15 +57,16 @@
         ul {
             list-style: none;
             padding: 0;
-            margin-bottom: 30px;
+            margin-bottom: 20px;
         }
         li {
-            display: inline;
+            display: inline-block;
             font-size: 13px;
             color: #fff;
             background-color: #000;
             padding: 10px 15px;
             margin-right: 10px;
+            margin-bottom: 10px;
         }
     }
 
